#355 Resolve incorrect nullability and modifiability assumptions